# genisys

./: .gitignore  .pylintrc  LICENSE  README.md  build.sh  dns.py  main.py  output  pyproject.toml  requirements.txt  test.sh
.github/workflows/: build.yaml  genisys-generate.yml  genisys-install.yml  genisys-password.yaml  genisys-server.yml  pylint.yaml  run_tests.yaml
docs/: example.ini
documentation/: Initialization Process.drawio  Network Diagram.drawio  example.ini  example.yml  test.sh.drawio
documentation/man/: genisys-generate.1  genisys-install.1  genisys-server.1  genisys-validate.1  genisys.1
documentation/systemd/: genisys.service
genisys/: configParser.py  config_parser.py  loader.py  main.py  make_password.py  server.py  yaml-parser.py
genisys-test-1710710127/: genisys-host.ssh_config
genisys/modules/: FTP.py  base.py  dns.py  firstboot.py  ftp.py  kernelparameter.py  nat.py  netplan.py  os_file_download.py  preseed.py  script.py  syslinux.py
genisys/scripts/: script1.sh  script2.sh
genisys/server/: __init__.py  genisysinventory.py  http.py  inventory.py  tls.py
genisys/templates/: genisys-firstboot.service  preseed.cfg.jinja2  pxelinux.cfg.j2
ini-parser/: ini-parser.py  test.ini  test2.ini
meteor-dev/: package-lock.json  package.json
meteor-dev/.meteor/: .id  packages  versions
meteor-dev/client/: main.html
meteor-dev/server/: main.js  serverMethods.js
meteor-dev/tests/: main.js
playbooks/Docker-Seleinum/: docker_selinum.yml  test_vault.yml
scripts/: script1.sh
src/: main.py
src/modules/: base.py
tests/: cert.pem  inventory_test.py  run_tests.py  test.pub  test2.pub
tests/configs/: ftp_test_1.yml  ftp_test_2.yml  ftp_test_3.yml  ftp_test_4.yml  ftp_test_5.yml  hello_test_1.yml  hello_test_2.yml  nat_test_1.yml  nat_test_2.yml  nat_test_3.yml  preseed_ftp_uri.yaml  preseed_ssh_key_contents.yaml  vboxmanage-tests.yaml
tests/modules/: test_ftp.py  test_hello.py  test_nat.py  test_netplan.py  test_preseed.py  test_pxelinux.py
tests/scripts/: test.sh
tests/ssh/: id_rsa  id_rsa.pub
yaml-parser/: test.yml  yaml-parser.py
(+22 files in other folders)
