[build-system]
requires = ["setuptools >= 46.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "genisys"
license = "BSD"
version = "0.1.0"
description = "Automatically install and configure machines over PXE"
authors = [
    "Robert Gingras <gingrm02@pfw.edu>",
    "Henry Green <greeht01@pfw.edu>",
    "Benny Bergle <bergba01@pfw.edu>",
    "Rowan Akers <akerrm01@pfw.edu>",
    "Dhyan Patel <patedm01@pfw.edu>"
]

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.scripts]
genisys = "genisys.main:main"

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "6.0.1"
