[build-system]
requires = ["setuptools >= 46.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "genisys"
license = "BSD"
version = "0.2.0"
description = "Automatically install and configure machines over PXE"
authors = [
    "Robert Gingras <gingrm02@pfw.edu>",
    "Henry Green <greeht01@pfw.edu>",
    "Benny Bergle <bergba01@pfw.edu>",
    "Rowan Akers <akerrm01@pfw.edu>",
    "Dhyan Patel <patedm01@pfw.edu>"
]

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.scripts]
genisys = "genisys.main:main"

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "6.0.1"
jinja2 = "^3.1.3"
typing-extensions = "^4.8.0"
passlib = "^1.7.4"
textwrap3 = "^0.9.2"
requests = "^2.31.0"
cryptography = "^3.4.8"
pymongo = "^4.6.2"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.1"
